Source/WebKit2/WebProcess/WebPage/WebPage.cpp
@@ -1514,6 +1514,7 @@ void WebPage::dragEnded(WebCore::IntPoint clientPosition, WebCore::IntPoint glob
     IntPoint adjustedClientPosition(clientPosition.x() + m_page->dragController()->dragOffset().x(), clientPosition.y() + m_page->dragController()->dragOffset().y());
     IntPoint adjustedGlobalPosition(globalPosition.x() + m_page->dragController()->dragOffset().x(), globalPosition.y() + m_page->dragController()->dragOffset().y());
     
+    platformDragEnded();
     m_page->dragController()->dragEnded();
     FrameView* view = m_page->mainFrame()->view();
     if (!view)
@@ -2108,5 +2109,11 @@ void WebPage::setMemoryCacheMessagesEnabled(bool memoryCacheMessagesEnabled)
 {
     m_page->setMemoryCacheClientCallsEnabled(memoryCacheMessagesEnabled);
 }
+
+#if !PLATFORM(MAC)
+void WebPage::platformDragEnded()
+{
+}
+#endif
 
 } // namespace WebKit
